--- a/sass/partials/_loader-section.scss
+++ b/sass/partials/_loader-section.scss
@@ -15,12 +15,15 @@
     .loader-section{
         margin-left: 0;
         margin-top: $nav-height;
-        height: calc(100vh - $nav-height - ($loader-section-padding * 2) - $toolbar-height);
+        height: calc(100vh - $nav-height - $toolbar-height);
+        width: 100%;
     }
 
-    .no-scroll{
-        overflow-y: hidden;
-    }
+    
+}
+
+.no-scroll{
+    overflow-y: hidden;
 }
 
 .active-section{
